# DBT-for-DE

./: README.md  pyproject.toml
databricks_demo/: dbt_project.yml
databricks_demo/macros/: create_bronze_sensors_identity_table.sql  create_bronze_users_identity_table.sql
databricks_demo/models/: gold_hourly_summary_stats_7_day_rolling.sql  gold_smoothed_sensors_3_day_rolling.sql  silver_sensors_scd_1.sql  silver_users_scd_1.sql  sources.yml
github_pipeline/: github_api.py  github_pipeline.py  requirements.txt
my_filesystem_pipeline/: filesystem_pipeline.py  requirements.txt
my_filesystem_pipeline/.dlt/: config.toml
