[tool.poetry]
name = "dbt-for-de"
version = "0.1.0"
description = "DBT For Data Engineering"
authors = ["bamitesh <b.amitesh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-databricks = "^1.8.7"
dbt-core = "^1.8.9"
dbt-spark = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
